Fix anoying facebook like iframe width on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -459,6 +459,11 @@ a {
   display: inline-block;
 }
 
+.fb-like {
+    width: 100%;
+    overflow: hidden;
+}
+
 @media(max-width: 992px) {
   .xs-text-center {
     text-align: center !important;
